--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,6 +15,7 @@ jobs:
       - name: run tests
         run: npm test
   Deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
@@ -30,4 +31,4 @@ jobs:
       - name: build project
         run: npm run build
       - name: deploy
-        run: echo "deploy"
+        run: echo "deploy..."
